<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".VerifyActivity">

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="start"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_img_login" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen_ex_bold"
        android:gravity="center_horizontal|bottom"
        android:text="Verification"
        android:textColor="#212121"
        android:textSize="35sp"
        android:layout_marginTop="80dp"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_otp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:fontFamily="@font/oxygen_regular"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verify"
        android:layout_width="145dp"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/oxygen_ex_bold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="5dp" />

    <TextView
        android:id="@+id/terms_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/oxygen_bold"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/privacy_about"
        android:textAlignment="center"
        android:textColor="#aa212121"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_regular"
            android:lineSpacingExtra="5dp"
            android:text="@string/termsandconditions"
            android:textColor="#aa212121"
            android:textColorLink="@color/colorPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/cookies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/oxygen_regular"
            android:lineSpacingExtra="5dp"
            android:text="and Cookies."
            android:textColor="#aa212121"
            android:textColorLink="@color/colorPrimary"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>