<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:src="@drawable/ic_img_login" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:fontFamily="@font/oxygen_ex_bold"
                android:text="@string/login"
                android:visibility="visible"
                android:textColor="#212121"
                android:textSize="35sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:fontFamily="@font/oxygen_regular"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter password"
                android:layout_marginHorizontal="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_visibility_off_black_24dp"
                    android:ems="10"
                    android:fontFamily="@font/oxygen_regular"
                    android:inputType="textPassword"
                    android:textColor="#212121"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/oxygen_regular"
                android:text="Forgot Password?"
                android:textColor="#605F5F"
                android:paddingVertical="5dp"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/oxygen_ex_bold"
                app:cornerRadius="5dp"
                android:text="@string/login"
                app:backgroundTint="@color/colorPrimary"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup"
                android:layout_width="145dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/oxygen_ex_bold"
                app:cornerRadius="5dp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/sign_up"
                android:visibility="gone"
                android:textSize="18dp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/account_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_regular"
                        android:padding="5dp"
                        android:text="@string/don_t_have_an_account_yet" />

                    <TextView
                        android:id="@+id/signup_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_bold"
                        android:padding="5dp"
                        android:text="@string/sign_up"
                        android:textColor="#171E30"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/oxygen_bold"
                        android:padding="5dp"
                        android:text="@string/login"
                        android:textColor="#171E30"
                        android:textSize="18sp"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oxygen_ex_bold"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:text="OR"
                    android:textColor="#212121"
                    android:textSize="15sp" />

            </LinearLayout>

            <com.shobhitpuri.custombuttons.GoogleSignInButton
                android:id="@+id/signin_google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="10dp"
                android:gravity="center"
                app:isDarkTheme="false" />

            <Button
                android:id="@+id/buttonPhoneAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="8dp"
                android:text="@string/login_with_phone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:fontFamily="@font/oxygen_bold"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/privacy_about"
                android:textAlignment="center"
                android:textColor="#aa212121"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/oxygen_regular"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/termsandconditions"
                    android:textColor="#aa212121"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/cookies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginStart="2dp"
                    android:fontFamily="@font/oxygen_regular"
                    android:lineSpacingExtra="5dp"
                    android:text="and Cookies."
                    android:textColorLink="@color/colorPrimary"
                    android:textColor="#aa212121" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

